Update repository URLs in GitOps application configurations to point to aap-policy.git

--- a/gitops-apps-day-1.yaml
+++ b/gitops-apps-day-1.yaml
@@ -17,7 +17,7 @@ spec:
   project: default
   source:
     path: apps/aap-operator
-    repoURL: https://github.com/hultzj/aap-setup.git
+    repoURL: https://github.com/hultzj/aap-policy.git
     targetRevision: main
   syncPolicy:
     automated:
@@ -53,7 +53,7 @@ spec:
   project: default
   source:
     path: apps/aap-rbac
-    repoURL: https://github.com/hultzj/aap-setup.git
+    repoURL: https://github.com/hultzj/aap-policy.git
     targetRevision: main
   syncPolicy:
     automated:
