--- a/apps/aap-operator/operatorgroup.yaml
+++ b/apps/aap-operator/operatorgroup.yaml
@@ -1,10 +1,10 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: aap-operator-group
+  name: ansible-automation-platform-operator-group
   namespace: ansible-automation-platform
   labels:
-    app.kubernetes.io/name: aap-operator
+    app.kubernetes.io/name: ansible-automation-platform-operator
     app.kubernetes.io/part-of: ansible-automation-platform
     app.kubernetes.io/managed-by: gitops
   annotations:
