--- a/apps/aap-operator/subscription.yaml
+++ b/apps/aap-operator/subscription.yaml
@@ -1,17 +1,17 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: aap-operator
+  name: ansible-automation-platform-operator
   namespace: ansible-automation-platform
   labels:
-    app.kubernetes.io/name: aap-operator
+    app.kubernetes.io/name: ansible-automation-platform-operator
     app.kubernetes.io/part-of: ansible-automation-platform
     app.kubernetes.io/managed-by: gitops
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
   channel: stable-2.5-cluster-scoped
-  name: aap-operator
+  name: ansible-automation-platform-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
   installPlanApproval: Automatic
