--- a/gitops-apps-day-1.yaml
+++ b/gitops-apps-day-1.yaml
@@ -5,7 +5,7 @@ metadata:
   name: aap-operator-day1
   namespace: openshift-gitops
   labels:
-    app.kubernetes.io/name: aap-operator
+    app.kubernetes.io/name: ansible-automation-platform-operator
     app.kubernetes.io/part-of: ansible-automation-platform
     deployment-phase: day-1
   annotations:
