Fix image pull error: Replace quay.io/ansible/creator-ubi8 with registry.redhat.io/openshift4/ose-cli
- Updated automation.image.repository in both aap-instance and aap-servicemesh values.yaml
- Resolves unauthorized access error when pulling creator-ubi8 image
- ose-cli image provides same functionality (oc commands + openssl) and is publicly available

--- a/apps/aap-servicemesh/values.yaml
+++ b/apps/aap-servicemesh/values.yaml
@@ -34,6 +34,6 @@ automation:
   serviceAccount:
     name: "aap-setup-automation"
   image:
-    repository: "quay.io/ansible/creator-ubi8"
+    repository: "registry.redhat.io/openshift4/ose-cli"
     tag: "latest"
     pullPolicy: "IfNotPresent"
