Update imagePullPolicy to Always for all automation containers
- Changed pullPolicy from 'IfNotPresent' to 'Always' in aap-instance/values.yaml
- Changed pullPolicy from 'IfNotPresent' to 'Always' in aap-servicemesh/values.yaml
- Ensures latest container images are always pulled during deployments
- Affects password-generator, access-info-generator, and ossm-configurator jobs

--- a/apps/aap-servicemesh/values.yaml
+++ b/apps/aap-servicemesh/values.yaml
@@ -36,4 +36,4 @@ automation:
   image:
     repository: "registry.redhat.io/openshift4/ose-cli"
     tag: "latest"
-    pullPolicy: "IfNotPresent"
+    pullPolicy: "Always"
