--- a/apps/aap-instance/values.yaml
+++ b/apps/aap-instance/values.yaml
@@ -147,7 +147,7 @@ automation:
   image:
     repository: "registry.redhat.io/openshift4/ose-cli"
     tag: "latest"
-    pullPolicy: "IfNotPresent"
+    pullPolicy: "Always"
   nodeSelector: {}
   tolerations: []
   affinity: {}
