Update subscription channel in AAP operator configuration to stable-2.5

--- a/apps/aap-operator/subscription.yaml
+++ b/apps/aap-operator/subscription.yaml
@@ -10,7 +10,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
-  channel: stable-2.5-cluster-scoped
+  channel: stable-2.5
   name: ansible-automation-platform-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
