--- a/apps/aap-instance/values.yaml
+++ b/apps/aap-instance/values.yaml
@@ -1,153 +1,58 @@
-# AAP Instance Configuration Values
-aapOperator:
-  version: "2.5"
-  namespace: "ansible-automation-platform"
-
-aapInstance:
+# Simplified AAP Instance Configuration
+# Core Ansible Automation Platform Controller
+aap:
+  # Basic Configuration
   name: "aap-controller"
   namespace: "ansible-automation-platform"
+  version: "2.5"
+  
+  # License (REQUIRED for full functionality)
+  license:
+    enabled: false           # Set to true and provide content
+    secretName: "aap-license"
+    content: ""             # Base64 encoded license JSON
+  
+  # Admin User
   admin:
     username: "admin"
-    password: ""  # Will be auto-generated if empty
+    password: ""            # Auto-generated if empty
     email: "admin@example.com"
-  # License configuration
-  license:
-    # Set to true to enable license from secret
-    enabled: false
-    # Name of the secret containing the license file
-    # The secret should contain a key 'license' with the license JSON content
-    secretName: "aap-license"
-    # If license content is provided directly (base64 encoded JSON)
-    content: ""
+  
+  # Resource Configuration
   resources:
-    requests:
-      cpu: "1000m"
-      memory: "2Gi"
-    limits:
-      cpu: "2000m"
-      memory: "4Gi"
+    cpu: "1000m"           # CPU requests (limits: 2x)
+    memory: "2Gi"          # Memory requests (limits: 2x)
+  
+  # Storage Configuration  
   storage:
     size: "20Gi"
-    storageClass: ""  # Use default storage class
+    storageClass: ""        # Use cluster default
   
-  # PostgreSQL Configuration
-  postgres:
-    # Use external postgres database (optional)
+  # Database Configuration
+  database:
+    # External PostgreSQL (optional)
     external:
       enabled: false
-      # If enabled, create a secret with these connection details
       host: ""
       port: "5432"
       database: "awx"
       username: "awx"
       password: ""
-      sslMode: "prefer"
-      secretName: ""  # Use existing secret if provided
-    # Internal postgres configuration (used when external.enabled=false)
+      secretName: ""        # Use existing secret if provided
+    # Internal PostgreSQL settings
     internal:
-      storage:
-        size: "20Gi"
-        storageClass: ""
-      resources:
-        requests:
-          cpu: "1000m"
-          memory: "2Gi"
-        limits:
-          cpu: "2000m"
-          memory: "4Gi"
-
-# Optional Private Automation Hub Configuration
-automationHub:
-  enabled: false
-  name: "automation-hub"
-  namespace: "ansible-automation-platform"
-  admin:
-    username: "admin"
-    password: ""  # Will be auto-generated if empty
-    email: "admin@example.com"
-  resources:
-    requests:
+      storage: "20Gi"
       cpu: "1000m"
       memory: "2Gi"
-    limits:
-      cpu: "2000m"
-      memory: "4Gi"
-  storage:
-    size: "20Gi"
-    storageClass: ""
-  # External postgres for hub (optional)
-  postgres:
-    external:
-      enabled: false
-      host: ""
-      port: "5432"
-      database: "pulp"
-      username: "pulp"
-      password: ""
-      sslMode: "prefer"
-      secretName: ""
-    internal:
-      storage:
-        size: "20Gi"
-        storageClass: ""
-      resources:
-        requests:
-          cpu: "500m"
-          memory: "1Gi"
-        limits:
-          cpu: "1000m"
-          memory: "2Gi"
 
-# Optional Event Driven Ansible Controller Configuration
-edaController:
-  enabled: false
-  name: "eda-controller"
-  namespace: "ansible-automation-platform"
-  admin:
-    username: "admin"
-    password: ""  # Will be auto-generated if empty
-    email: "admin@example.com"
-  resources:
-    requests:
-      cpu: "500m"
-      memory: "1Gi"
-    limits:
-      cpu: "1000m"
-      memory: "2Gi"
-  storage:
-    size: "10Gi"
-    storageClass: ""
-  # External postgres for EDA (optional)
-  postgres:
-    external:
-      enabled: false
-      host: ""
-      port: "5432"
-      database: "eda"
-      username: "eda"
-      password: ""
-      sslMode: "prefer"
-      secretName: ""
-    internal:
-      storage:
-        size: "10Gi"
-        storageClass: ""
-      resources:
-        requests:
-          cpu: "500m"
-          memory: "1Gi"
-        limits:
-          cpu: "1000m"
-          memory: "2Gi"
+# Optional Add-ons (create separate apps for these if needed)
+addons:
+  # To enable Hub or EDA, create separate GitOps applications
+  # This keeps the base AAP controller configuration simple
+  note: "Use separate apps/automation-hub and apps/eda-controller for optional components"
 
-# Job configuration for Ansible automation
+# Internal automation configuration
 automation:
-  serviceAccount:
-    name: "aap-setup-automation"
-  image:
-    repository: "registry.redhat.io/openshift4/ose-cli"
-    tag: "latest"
-    pullPolicy: "Always"
-  nodeSelector: {}
-  tolerations: []
-  affinity: {}
+  serviceAccount: "aap-setup-automation"
+  image: "registry.redhat.io/openshift4/ose-cli:latest"
+  pullPolicy: "Always"
