Remove license playbooks, servicemesh, and make RBAC optional
BREAKING CHANGES:
- Removed all license-related configurations and jobs
- Completely removed aap-servicemesh app and all related files
- Moved RBAC from mandatory day-1 to optional day-2 deployment

Changes:
✅ License Removal:
  - Removed license configuration from values.yaml
  - Removed license secret creation from templates
  - Removed license_secret from AutomationController spec
  - Removed license parameters from GitOps day-2 application

✅ ServiceMesh Removal:
  - Deleted entire apps/aap-servicemesh directory
  - Removed aap-servicemesh-day2 application from GitOps
  - Simplified architecture to focus on core AAP only

✅ RBAC Made Optional:
  - Moved aap-rbac from day-1 (mandatory) to day-2 (optional)
  - Added optional=true label to RBAC application
  - Changed sync-wave to 5 (runs before AAP instance)
  - AAP operator now handles namespace creation in day-1

Benefits:
- Simpler deployment with fewer required components
- Faster initial setup (RBAC and ServiceMesh optional)
- Focused on core AAP functionality
- License can be added manually via web UI if needed
- Clean architecture without complex optional components

--- a/gitops-apps-day-2.yaml
+++ b/gitops-apps-day-2.yaml
@@ -35,13 +35,6 @@ spec:
           value: "admin"
         - name: aap.admin.email
           value: "admin@example.com"
-        # License Configuration (REQUIRED - set enabled=true and provide content)
-        - name: aap.license.enabled
-          value: "false"
-        - name: aap.license.secretName
-          value: "aap-license"
-        - name: aap.license.content
-          value: ""  # Base64 encoded license JSON content
         # Resource Configuration
         - name: aap.resources.cpu
           value: "1000m"
@@ -77,42 +70,32 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: aap-servicemesh-day2
+  name: aap-rbac-day2
   namespace: openshift-gitops
   labels:
-    app.kubernetes.io/name: aap-servicemesh
+    app.kubernetes.io/name: aap-rbac
     app.kubernetes.io/part-of: ansible-automation-platform
     deployment-phase: day-2
     optional: "true"
   annotations:
-    argocd.argoproj.io/sync-wave: "20"
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   destination:
     namespace: ansible-automation-platform
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: apps/aap-servicemesh
+    path: apps/aap-rbac
     repoURL: https://github.com/hultzj/aap-policy.git
     targetRevision: main
-    helm:
-      valueFiles:
-        - values.yaml
-      parameters:
-        - name: serviceMesh.enabled
-          value: "false"
-        - name: serviceMesh.istio.enabled
-          value: "false"
-        - name: serviceMesh.ossm.enabled
-          value: "false"
   syncPolicy:
     syncOptions:
-      - CreateNamespace=false
+      - CreateNamespace=true
       - PrunePropagationPolicy=foreground
     retry:
       limit: 3
       backoff:
-        duration: 15s
+        duration: 10s
         factor: 2
         maxDuration: 3m
   revisionHistoryLimit: 3
