Make AAP operator configurable with variables for channel, labels, name and namespace
Features Added:
✅ Created values.yaml for aap-operator with configurable variables:
  - operator.name - Operator subscription name
  - operator.namespace - Target namespace
  - operator.subscription.channel - Operator channel (stable-2.5, etc.)
  - operator.subscription.source - Catalog source
  - operator.subscription.installPlanApproval - Automatic/Manual approval
  - operator.labels - Consistent labels across resources
  - operator.environment.watchNamespace - Watch namespace configuration

✅ Created Chart.yaml to make aap-operator a proper Helm chart

✅ Updated subscription.yaml to use Helm templates:
  - Configurable name, namespace, channel, source
  - Dynamic labels using toYaml
  - Configurable installPlanApproval and watchNamespace

✅ Updated operatorgroup.yaml to use Helm templates:
  - Configurable name and namespace
  - Dynamic labels and targetNamespaces

✅ Updated gitops-apps-day-1.yaml to use Helm:
  - Added valueFiles reference
  - Added parameters for operator configuration
  - Maintains backward compatibility with default values

Benefits:
- Easy channel switching (stable-2.4, stable-2.5, etc.)
- Configurable namespaces for multi-tenant deployments
- Flexible labeling for different environments
- Standardized Helm chart structure
- GitOps-friendly parameter overrides

--- a/apps/aap-operator/operatorgroup.yaml
+++ b/apps/aap-operator/operatorgroup.yaml
@@ -1,14 +1,12 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: ansible-automation-platform-operator-group
-  namespace: ansible-automation-platform
+  name: {{ .Values.operator.operatorGroup.name }}
+  namespace: {{ .Values.operator.namespace }}
   labels:
-    app.kubernetes.io/name: ansible-automation-platform-operator
-    app.kubernetes.io/part-of: ansible-automation-platform
-    app.kubernetes.io/managed-by: gitops
+    {{- toYaml .Values.operator.labels | nindent 4 }}
   annotations:
     argocd.argoproj.io/sync-wave: "0"
 spec:
   targetNamespaces:
-    - ansible-automation-platform
+    {{- toYaml .Values.operator.operatorGroup.targetNamespaces | nindent 4 }}
