Add version support to AAP operator subscription
Features Added:
✅ Version Configuration in values.yaml:
  - Added operator.subscription.version field
  - Optional field for pinning to specific CSV versions
  - Documented with example CSV format

✅ Updated subscription.yaml template:
  - Added conditional startingCSV field
  - Only includes startingCSV when version is specified
  - Maintains backward compatibility with empty version

✅ Updated GitOps day-1 application:
  - Added operator.subscription.version parameter
  - Defaults to empty (uses latest in channel)
  - Documented with example CSV version format

Usage Examples:
# Use latest version in channel (default behavior)
- name: operator.subscription.version
  value: ""

# Pin to specific version
- name: operator.subscription.version
  value: "aap-operator.v2.5.0-0.1699564237"

Benefits:
- Version pinning for production deployments
- Controlled operator upgrades
- Rollback capability to known good versions
- Consistent deployments across environments
- GitOps-friendly version management

--- a/apps/aap-operator/subscription.yaml
+++ b/apps/aap-operator/subscription.yaml
@@ -13,6 +13,9 @@ spec:
   source: {{ .Values.operator.subscription.source }}
   sourceNamespace: {{ .Values.operator.subscription.sourceNamespace }}
   installPlanApproval: {{ .Values.operator.subscription.installPlanApproval }}
+  {{- if .Values.operator.subscription.version }}
+  startingCSV: {{ .Values.operator.subscription.version }}
+  {{- end }}
   config:
     env:
       - name: WATCH_NAMESPACE
