Fix operator installation: Remove invalid CSV version specification
FIXES:
✅ Removed invalid CSV version (aap-operator.v2.5.0-0.1758147817)
✅ Set version to empty string to use latest from channel
✅ This allows subscription to use the currentCSV from stable-2.5 channel

Root Cause:
- Specified CSV version didn't exist in available catalog entries
- Latest available was aap-operator.v2.5.0-0.1731456196
- Invalid startingCSV prevented install plan creation

Resolution:
- Empty version field lets operator use channel's currentCSV
- Should now create install plan and install successfully
- Manual approval still required for install plan

--- a/apps/aap-operator/values.yaml
+++ b/apps/aap-operator/values.yaml
@@ -7,7 +7,7 @@ operator:
   # Subscription Configuration
   subscription:
     channel: "stable-2.5"              # Operator channel version
-    version: "aap-operator.v2.5.0-0.1758147817"      # Specific CSV version (latest available)
+    version: ""                         # Use latest from channel
     source: "redhat-operators"         # Catalog source
     sourceNamespace: "openshift-marketplace"
     installPlanApproval: "Manual"    # Automatic or Manual
